# factory

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: FindFactory.cmake
factory_example/: CMakeLists.txt  main.cpp
include/factory/: Factory.h  Factory.hpp  PerTypeStorage.hpp  defs.h
src/: CMakeLists.txt  PerTypeStorage.cpp
